# notitia

./: .gitignore  Cargo.toml  README.md
crates/notitia/: Cargo.toml  README.md
crates/notitia/src/: lib.rs
crates/notitia_cli/: Cargo.toml  build.rs
crates/notitia_cli/src/: config.rs  extract.rs  main.rs  snapshot.rs
crates/notitia_cli/src/commands/: check.rs  init.rs  mod.rs  snapshot.rs
crates/notitia_core/: Cargo.toml
crates/notitia_core/src/: adapter.rs  collection.rs  lib.rs
crates/notitia_core/src/database/: foreign_relationship.rs  mod.rs
crates/notitia_core/src/datatype/: kind.rs  mod.rs
crates/notitia_core/src/embeddings/: mod.rs
crates/notitia_core/src/field/: field_group.rs  mod.rs
crates/notitia_core/src/record/: mod.rs  primary_key.rs  unique.rs
crates/notitia_core/src/stmts/: mod.rs
crates/notitia_core/src/stmts/delete/: built.rs  mod.rs  unbuilt.rs
crates/notitia_core/src/stmts/insert/: built.rs  mod.rs  mutate_executor.rs
crates/notitia_core/src/stmts/select/: filter.rs  join.rs  mod.rs  order.rs  search.rs  select.rs
crates/notitia_core/src/stmts/select/built/: buildable.rs  fetch_mode.rs  mod.rs  query_executor.rs
crates/notitia_core/src/stmts/update/: built.rs  expr.rs  mod.rs  unbuilt.rs
crates/notitia_core/src/subscription/: descriptor.rs  event.rs  handle.rs  merge.rs  metadata.rs  mod.rs  overlap.rs  registry.rs
crates/notitia_core/src/table/: mod.rs  table_kind.rs
crates/notitia_core/src/utils/: iter_join.rs  mod.rs
crates/notitia_gpui/: Cargo.toml  README.md
crates/notitia_gpui/examples/todos/: element_id_ext.rs  main.rs  schema.rs
crates/notitia_gpui/examples/todos/components/: add_todo_modal.rs  mod.rs  todo_component.rs
crates/notitia_gpui/src/: lib.rs
crates/notitia_macros/: Cargo.toml
crates/notitia_macros/src/: database.rs  lib.rs  record.rs  utils.rs
crates/notitia_migrations/: Cargo.toml
crates/notitia_migrations/src/: compat.rs  error.rs  lib.rs  schema.rs  schema_string.rs
crates/notitia_sqlite/: Cargo.toml
crates/notitia_sqlite/src/: lib.rs
crates/notitia_sqlite/src/convert_stmts/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
crates/ordered_map/: Cargo.toml
crates/ordered_map/src/: lib.rs  ordered_set.rs
crates/unions/: Cargo.toml
crates/unions/examples/: basic.rs  builder.rs
crates/unions/src/: lib.rs
crates/zvec-bindings/: Cargo.toml
crates/zvec-sys/: Cargo.toml  build.rs
crates/zvec-sys/zvec-c-wrapper/include/: zvec_c_internal.h
crates/zvec-sys/zvec-c-wrapper/src/: collection.cpp  doc.cpp
examples/: example.rs
examples/app_embeddings/posts/: del.0  manifest.2
examples/app_embeddings/posts/0/: scalar.0.ipc
examples/app_embeddings/posts/idmap.0/: 000008.sst  IDENTITY  MANIFEST-000016
examples/example/: bert_embedder.rs  main.rs
