[package]
name = "notitia_workspace"
version = "0.1.0"
edition = "2024"

[dependencies]
notitia.workspace = true
notitia_gpui.workspace = true
notitia_sqlite = { workspace = true, default-features = true }
smallvec = "1.15.1"

[features]
default = []
embeddings = ["notitia/embeddings", "notitia_sqlite/embeddings"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]

[dev-dependencies]
anyhow = "1.0.100"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = { version = "0.4.3", features = ["tokio"] }
serde_json = "1.0.145"
tokenizers = "0.22.1"
tokio = { version = "1.49.0", features = ["full"] }

[[example]]
name = "example"
required-features = ["notitia/embeddings"]

[workspace]
members = ["crates/notitia_core", "crates/notitia_macros", "crates/notitia", "crates/notitia_sqlite", "crates/unions", "crates/notitia_gpui", "crates/ordered_map", "crates/zvec-sys", "crates/zvec-bindings"]

[workspace.dependencies]
# Local.
notitia = { path = "crates/notitia" }
notitia_core = { path = "crates/notitia_core" }
notitia_macros = { path = "crates/notitia_macros" }
notitia_sqlite = { path = "crates/notitia_sqlite", default-features = false }
notitia_gpui = { path = "crates/notitia_gpui" }
unions = { path = "crates/unions" }
ordered_map = { path = "crates/ordered_map" }
# Public.
# notitia = { git = "https://github.com/astrum-chat/notitia" }
# notitia_core = { git = "https://github.com/astrum-chat/notitia" }
# notitia_macros = { git = "https://github.com/astrum-chat/notitia" }
# notitia_sqlite = { git = "https://github.com/astrum-chat/notitia", default-features = false }
# notitia_gpui = { git = "https://github.com/astrum-chat/notitia" }
# unions = { git = "https://github.com/astrum-chat/notitia" }

[patch.crates-io]
gpui = { git = "https://github.com/zed-industries/zed" }
