[package]
name = "notitia_core"
version = "0.1.0"
edition = "2024"

[dependencies]
enum-assoc = "1.3.0"
phf = { version = "0.13.1", features = ["macros"] }
unions.workspace = true
ordered_map.workspace = true
derivative = "2.2.0"
smallvec = "1.15.1"
sea-query = "0.32.7"
crossbeam-channel = "0.5"

[features]
default = ["small_fields"]
smallvec = [ ]
extra_small_fields = []
small_fields = []
medium_fields = []
large_fields = []
extra_large_fields = []
