[package]
name = "notitia_gpui"
version = "0.1.0"
edition = "2024"

[dependencies]
notitia.workspace = true
unions.workspace = true
gpui = "0.2.2"
async-channel = "2"

# Fixes "two different versions of crate `core_graphics` are being used" error.
[target.'cfg(target_os = "macos")'.dependencies]
core-text = "=21.0.0"

[dev-dependencies]
notitia_sqlite = { workspace = true, default-features = false, features = ["runtime-async-std-native-tls"] }
smallvec = "1.15.1"
smol = "2"
gpui_primitives = { git = "https://github.com/astrum-chat/gpui_tesserae" }
nanoid = "0.4.0"
