[package]
name = "notitia_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
notitia_core.workspace = true
phf = { version = "0.13.1", features = ["macros"] }
convert_case = "0.10.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[features]
default = []
embeddings = []
